--- a/templates/songs.jinja
+++ b/templates/songs.jinja
@@ -1,15 +1,15 @@
 {% extends "base" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Songs{% endblock %}
 
 {% block content %}
 <div>
     <h2 class="text-2xl font-semibold">Albums</h2>
     <div class="grid grid-cols-5 gap-4 mt-4">
-        {% for album in albums %}
+        {% for song in songs %}
         <div class="bg-gray-700 p-4 rounded-lg">
-            <img src="{{ album.cover }}" class="rounded" alt="{{ album.name }}-image"/>
-            <p class="mt-2">{{ album.name }}</p>
+            <img src="" data-song="{{ song.name }}" class="rounded song-cover" alt="{{ song.name }}-image"/>
+            <p class="mt-2">{{ song.name }}</p>
         </div>
         {% endfor %}
     </div>
