--- a/runtime/templates/lists.jinja
+++ b/runtime/templates/lists.jinja
@@ -13,7 +13,7 @@
                 {% else %}
                 <h3>{{loop.index}}</h3>
                 {% endif %}
-                <img src="../assets/images/place_holder.webp" alt="Album Cover">
+                <img src="../assets/images/place_holder.webp" alt="Song Cover">
                 <h3>{{song.name}}</h3>
             </div>
             {% endfor %}
