--- a/runtime/assets/css/common.css
+++ b/runtime/assets/css/common.css
@@ -33,7 +33,7 @@ body {
     box-shadow: var(--accent-color) 0px 0px 10px;
 }
 
-.card img {
-    width: 120px;
+.image-container {
+    width: 90%;
     border-radius: 8px;
 }
