--- a/runtime/templates/lists.jinja
+++ b/runtime/templates/lists.jinja
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="../assets/css/lists.css">
 {% endblock %}
 {% block content %}
-<main aria-label="Main Content">
+<main aria-label="Main Content" id="sub_page">
     <section class="music-section" aria-label="Songs">
         <div class="music-grid" aria-label="Songs Grid">
             {% for song in songs %}
