--- a/Client/src/app/pages/songs/songs.css
+++ b/Client/src/app/pages/songs/songs.css
@@ -1,51 +1,9 @@
-.controls_container {
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
-}
-
-.card_container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 30px 15px;
-}
-
-.card {
-  background: #282828;
-  border-radius: 15px;
-  text-align: center;
-  position: relative;
+.songs_container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  overflow: hidden;
-  padding: 15px 15px 0;
-  height: 100%;
-}
-.card:hover {
-  box-shadow: var(--accent-colour) 0 0 10px;
-}
-
-.card img {
-  position: relative;
-  width: 90%;
-  margin: 10px;
-  border-radius: 8px;
-  aspect-ratio: 1 / 1;
-  overflow: hidden;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-}
-
-.card_content {
-  transform: translateY(-10px);
-  -ms-transform: translateY(-10px);
-}
-
-.card_content h1 {
-  max-height: 86px;
-  max-width: 200px;
-  text-overflow: ellipsis;
-  overflow: hidden;
+  gap: 10px;
 }
 
 .card_content p {
@@ -53,12 +11,13 @@
   max-height: 42px;
   text-overflow: ellipsis;
   overflow: hidden;
+  font-size: 0.9rem;
 }
 
 .action {
   position: absolute;
-  bottom: 10px;
-  right: 10px;
+  bottom: 2px;
+  right: 2px;
   z-index: 10;
 }
 
