--- a/Client/src/app/pages/songs/songs.html
+++ b/Client/src/app/pages/songs/songs.html
@@ -1,25 +1,39 @@
-<div class="controls_container">
-  <button><fa-icon [icon]="faArrowLeft"/></button>
-  <br/>
-  <button><fa-icon [icon]="faArrowRight"/></button>
-</div>
-<div class="card_container">
-  @for (song of songs_data; track songs_data.length) {
-    <mat-card class="card" (click)="playSong(song)">
-      <img [src]="getSongCover(song)" alt=""/>
-      <mat-card-content class="card_content">
-        <h1>{{song.name}}</h1>
-        <p>{{song.artist}}</p>
-      </mat-card-content>
-      <mat-card-actions class="action">
-        <button mat-icon-button
-          type="button" matSuffix
-          (click)="addToPlaylist(song)"
-          role="button" [attr.aria-label]=""
-          class="action_button"
-        ><fa-icon [icon]="faPlus"></fa-icon>
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  }
+<div class="songs_container">
+  <div class="card_container">
+    @for (song of songs_data; track index; let index = $index) {
+      <mat-card class="card" (click)="playSong(song)">
+        @if (!isCoverLoading(song)) {
+          <img [src]="getCoverUrl(song)" alt="" />
+        } @else {
+          <div class="image-skeleton"></div>
+        }
+        <mat-card-content class="card_content">
+          <h1>{{ song.name }}</h1>
+          <p>{{ song.artist }}</p>
+        </mat-card-content>
+        <mat-card-actions class="action">
+          <button
+            mat-icon-button
+            type="button"
+            matSuffix
+            (click)="addToPlaylist(song)"
+            role="button"
+            [attr.aria-label]="'add Song ' + song.name + ' by ' + song.artist + ' to a playlist'"
+            class="action_button"
+          >
+            <fa-icon [icon]="faPlus"></fa-icon>
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    }
+  </div>
+  <div class="controls_container">
+    <button [attr.aria-label]="'get last 48 songs'">
+      <fa-icon [icon]="faArrowLeft" (click)="shiftSpanLeft()"></fa-icon>
+    </button>
+    <h1>{{ spanStart }} - {{ spanEnd }}</h1>
+    <button [attr.aria-label]="'get next 48 songs'">
+      <fa-icon [icon]="faArrowRight" (click)="shiftSpanRight()"></fa-icon>
+    </button>
+  </div>
 </div>
